# panda-parser-backend

./: CMakeLists.txt  EMTrainer.h  EMTrainerLA.h  EigenUtil.h  GrammarInfo.h  HybridTree.h  Hypergraph.h  LCFRS.h  LCFRS_Parser.h  LCFRS_util.h  LICENSE  Manager.h  Names.h  README.md  SDCP.h  SDCP_Parser.h  SplitMergeTrainer.h  SplitMergeUtil.h  StorageManager.h  Trace.h  TraceManager.h  TrainerBuilder.h  TrainerFactory.h  TrainingCommon.h  aux.h  debug_util.h  eigen_test.cpp  main.cpp  main_lcfrs.cpp  main_tracemanager.cpp  manager.cpp  util.h
DCP/: HybridTree.h  SDCP.h  SDCP_Parser.h  util.h
LCFR/: LCFRS.h  LCFRS_Parser.h  LCFRS_util.h  main_lcfrs.cpp  manager_util.h
Legacy/: EigenUtil.h  SplitMergeUtil.h  Trace.h  eigen_functions.cpp  main.cpp
Manage/: Hypergraph.h  Manager.h  Manager_util.h
Trainer/: AnnotationProjection.h  EMTrainer.h  EMTrainerLA.h  GeneticCrosser.h  GrammarInfo.h  HypergraphRanker.h  LatentAnnotation.h  MergePreparator.h  Smoother.h  SplitMergeTrainer.h  StorageManager.h  TraceManager.h  TrainerBuilder.h  TrainingCommon.h  Validation.h
